tests/error/poly_errors/non_linear1.err
Error: Not defined for linear argument (at $FILE:21:4)
   | 
19 | @guppy(module)
20 | def main(q: qubit) -> None:
21 |     foo(q)
   |     ^^^^^^ Cannot instantiate non-linear type parameter `T` in type
   |            `forall T. T -> None` with linear type `qubit`

Guppy compilation failed due to 1 previous error
